# p4lnv2

./: .gitignore  Taskfile.yaml  pyproject.toml  test.py  todo.md
src/lib/config/: Env.py  dir.py
src/lib/log/: Logger.py
src/lib/timer/: Timer.py  exceptions.py
src/lib/utils/: utils.py
src/main/extract/: EXT0001.py  EXT0001q.py  EXT0002.py  EXT0003.py  EXT0004.py  _example.py
src/main/train/: TRN0001.py  TRN0001q.py
src/main/visualize/: VSL0001.py
src/modules/analyse/: analyzer.py
src/modules/color/: Color.py  ColorPallet.py  exceptions.py  type.py
src/modules/data/hdf/: hdf5.py
src/modules/data_pipeline/: aggregator.py  data_pipeline.py  dynamic_positional_encoder.py  dynamics.py  initializer.py  sinusoidal_positional_encoder.py
src/modules/dataloader/: dataloader.py
src/modules/extract/extractor/: extractor.py
src/modules/extract/language/: _language.py
src/modules/extract/language/esm/: _esm.py  _esm3.py  esm1b.py  esm2.py  esm_converter.py
src/modules/extract/language/quick_esm/: _quick_esm.py  create_source.py  quick_esm1b.py  quick_esm2.py
src/modules/model/: _types.py  architecture.py  configurable_model.py  exceptions.py  layer.py
src/modules/protein/: exceptions.py  protein.py  protein_list.py
src/modules/train/: criterion.py  epoch_results.py  train_recorder.py  train_result.py  trainer.py  types.py
src/modules/visualize/: visualizer.py
